# workmate

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  students1.csv  students2.csv
reports/: __init__.py  base.py  student_report.py  teacher_report.py
tests/: test_reports.py
