[project]
name = "workmate"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita",email = "vomerff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]
